tests/integration/snapshots/test_invalid_test_file_syntax.stderr.txt
[ROOT]/tests/test_test.tolk_test[LINE]: error: expected `;`, got `a`
   3 |                 let a = 10;
     |                     ^
